Add addRun